--- a/index.css
+++ b/index.css
@@ -531,6 +531,7 @@ html {
   .hero__title {
     font-size: clamp(2rem, 6vw + 0.5rem, var(--fs-biggest));
     margin-bottom: 0.8rem;
+    color: rgb(170, 44, 44);
   }
   
   .hero__title-underline {
